Correct white spaces

--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-/*General CSS*/
-
 html {
   box-sizing: border-box;
   margin: 0;
@@ -8,8 +6,6 @@ html {
 body {
   font-family: "Roboto", sans-serif;
 }
-
-/*Navbar section CSS*/
 
 .toolbar ul {
   display: flex;
@@ -60,8 +56,6 @@ body {
   border: none;
 }
 
-/*Headline section CSS*/
-
 .headline {
   display: flex;
   flex-direction: column;
@@ -83,7 +77,7 @@ body {
   font-weight: 400;
   font-size: 56px;
   line-height: 64px;
-  letter-spacing: 0.37px;
+  letter-spacing: 1px;
   color: #ff6b00;
   margin-top: 12px;
   margin-bottom: 14px;
